feat: add practice files

--- a/machine_learning_practice_Andrew Ng(吴恩达机器学习)/linear_regression_practice(线性回归).ipynb
+++ b/machine_learning_practice_Andrew Ng(吴恩达机器学习)/linear_regression_practice(线性回归).ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -135,12 +135,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#读取数据并赋予列名\n",
-    "df = pd.read_csv('E:\\Learning\\python\\ML\\code\\ex1-linear regression\\ex1data1.txt',names=['population','profit'])"
+    "df = pd.read_csv('dataset（数据集）\\ex1data1.txt',names=['population','profit'])"
    ]
   },
   {
@@ -7261,11 +7261,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2 = pd.read_csv('E:\\Learning\\python\\ML\\code\\ex1-linear regression\\ex1data2.txt',names=['size of house','number of bedroom','house price'])"
+    "df2 = pd.read_csv('dataset（数据集）\\ex1data2.txt',names=['size of house','number of bedroom','house price'])"
    ]
   },
   {
