--- a/machine_learning_practice_Andrew Ng(吴恩达机器学习)/neural network practice(神经网络2).ipynb
+++ b/machine_learning_practice_Andrew Ng(吴恩达机器学习)/neural network practice(神经网络2).ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -133,11 +133,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = sio.loadmat(r\"E:\\Learning\\python\\ML\\code\\ex4-NN back propagation\\ex4data1.mat\")"
+    "data = sio.loadmat(r\"dataset（数据集）\\ex4data1.mat\")"
    ]
   },
   {
@@ -1661,9 +1661,7 @@
    "metadata": {},
    "source": [
     "## 3.2前向传播函数\n",
-    "> a1：(400 + 1) -> a2：(25 + 1) -> $h_{\\theta}(x)$：(10)\n",
-    "\n",
-    "<img style=\"float: left;\" src=\"code/img/nn_model.png\">"
+    "> a1：(400 + 1) -> a2：(25 + 1) -> $h_{\\theta}(x)$：(10)"
    ]
   },
   {
@@ -1688,8 +1686,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.3正则化代价函数\n",
-    "<img style=\"float: left;\" src=\"code/img/nn_regcost.png\">"
+    "## 3.3正则化代价函数"
    ]
   },
   {
