--- a/machine_learning_practice_Andrew Ng(吴恩达机器学习)/neural_network_practice(神经网络).ipynb
+++ b/machine_learning_practice_Andrew Ng(吴恩达机器学习)/neural_network_practice(神经网络).ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -127,11 +127,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = sio.loadmat(\"E:\\Learning\\python\\data\\wudaen Machine Learning\\code\\ex3-neural network\\ex3data1.mat\")"
+    "data = sio.loadmat(\"dataset（数据集）\\ex3data1.mat\")"
    ]
   },
   {
@@ -1977,8 +1977,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4.神经网络\n",
-    "<img style=\"float: left;\" src=\"code/img/nn_model.png\">"
+    "# 4.神经网络"
    ]
   },
   {
@@ -1990,11 +1989,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "weights=sio.loadmat('E:\\Learning\\python\\data\\wudaen Machine Learning\\code\\ex3-neural network\\ex3weights.mat')"
+    "weights=sio.loadmat('dataset（数据集）\\ex3weights.mat')"
    ]
   },
   {
