--- a/machine_learning_practice_Andrew Ng(吴恩达机器学习)/support_vector_machine（支持向量机）.ipynb
+++ b/machine_learning_practice_Andrew Ng(吴恩达机器学习)/support_vector_machine（支持向量机）.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -124,13 +124,13 @@
        "dict_keys(['__header__', '__version__', '__globals__', 'X', 'y'])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = sio.loadmat(r'E:\\Learning\\python\\ML\\code\\ex6-SVM\\data\\ex6data1.mat')\n",
+    "data = sio.loadmat(r'dataset（数据集）\\ex6data1.mat')\n",
     "data.keys()"
    ]
   },
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1441,13 +1441,13 @@
        "dict_keys(['__header__', '__version__', '__globals__', 'X', 'y'])"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data2 = sio.loadmat(r'E:\\Learning\\python\\ML\\code\\ex6-SVM\\data\\ex6data2.mat')\n",
+    "data2 = sio.loadmat(r'dataset（数据集）\\ex6data2.mat')\n",
     "data2.keys()"
    ]
   },
@@ -4359,7 +4359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -4369,14 +4369,14 @@
        " dict_keys(['__header__', '__version__', '__globals__', 'Xtest', 'ytest']))"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "spam_train = sio.loadmat(r'E:\\Learning\\python\\ML\\code\\ex6-SVM\\data\\spamTrain.mat')\n",
-    "spam_test = sio.loadmat(r'E:\\Learning\\python\\ML\\code\\ex6-SVM\\data\\spamTest.mat')\n",
+    "spam_train = sio.loadmat(r'dataset（数据集）\\spamTrain.mat')\n",
+    "spam_test = sio.loadmat(r'dataset（数据集）\\spamTest.mat')\n",
     "\n",
     "spam_train.keys(),spam_test.keys()"
    ]
